<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightGray"
    android:padding="16dp"
    tools:context=".MainActivity">

    <!-- Titre de l'application -->
    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textColor="@color/blue"
        android:textSize="32sp"
        android:textStyle="bold"
        android:gravity="center"
        android:shadowColor="@color/darkGray"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="6"
        android:padding="16dp"
        android:background="@drawable/title_background"
        android:elevation="6dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


    <!-- Conteneur des champs de saisie -->
    <LinearLayout
        android:id="@+id/inputContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="@drawable/rounded_background"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintWidth_percent="0.85">

        <!-- Champ : Nom de la pièce -->
        <EditText
            android:id="@+id/editTextPieceName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_background"
            android:hint="@string/nom_piece"
            android:inputType="text"
            android:padding="12dp" />

        <!-- Champ : Description de la pièce -->
        <EditText
            android:id="@+id/editTextPieceDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_background"
            android:hint="@string/description"
            android:inputType="text"
            android:padding="12dp" />

        <!-- Champ : Taille de la pièce -->
        <EditText
            android:id="@+id/editTextPieceSize"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_background"
            android:hint="@string/taille_m"
            android:inputType="numberDecimal"
            android:padding="12dp" />

        <!-- Champ : Étage de la pièce -->
        <EditText
            android:id="@+id/editTextPieceFloor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_background"
            android:hint="@string/etage"
            android:inputType="number"
            android:padding="12dp" />

        <!-- Champ : Créateur de la pièce -->
        <EditText
            android:id="@+id/editTextPieceCreator"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_background"
            android:hint="@string/salle_creator"
            android:inputType="text"
            android:padding="12dp" />

        <!-- Spinner : Type d'état des lieux -->
        <Spinner
            android:id="@+id/spinnerEtatDesLieux"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/spinner_background"
            android:entries="@array/etat_des_lieux_options"
            android:padding="12dp" />

        <!-- Bouton : Créer la pièce -->
        <Button
            android:id="@+id/creerPieceButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:backgroundTint="@color/blue"
            android:padding="12dp"
            android:text="@string/create"
            android:textColor="@android:color/white"
            android:textStyle="bold" />
    </LinearLayout>

    <!-- Liste des pièces -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/inputContainer"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Superposition pour les boutons d'action -->
    <FrameLayout
        android:id="@+id/overlayLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/transparent"
        android:visibility="gone">

        <LinearLayout
            android:id="@+id/actionButtonsLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:background="@drawable/rounded_background"
            android:padding="16dp">

            <ImageButton
                android:id="@+id/deleteButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:src="@drawable/ic_delete"
                android:contentDescription="@string/deletesalle"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:scaleType="fitCenter"
                android:padding="4dp"/>

            <ImageButton
                android:id="@+id/viewButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:src="@drawable/ic_view"
                android:contentDescription="@string/open"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:scaleType="fitCenter"
                android:padding="4dp"/>


        </LinearLayout>
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
